[package]
name = "libfat"
version = "0.1.0"
authors = ["Thog <me@thog.eu>"]
edition = "2018"

[dependencies]
arrayvec = {version = "0.4", default-features = false, features = ["array-sizes-33-128"]}
byteorder = { version = "1.0", default-features = false }
log = "0.4.6"
num-traits = { version = "0.2", default-features = false }
storage_device = { git = "https://github.com/sunriseos/storage_device.git" }
spin = { version = "0.5.0"}
structview = { version = "0.3", default-features = false }
