[package]
name = "libfat"
version = "0.1.0"
authors = ["Thog <me@thog.eu>"]
edition = "2018"

[dependencies]
arrayvec = {version = "0.4", default-features = false, features = ["array-sizes-33-128"]}
num-traits = { version = "0.2", default-features = false }
storage_device = { git = "https://github.com/sunriseos/storage_device.git", default-features = false }
spin = { version = "0.5.0"}
